objects/Acv_Picklist_Values__mdt.object
<CustomObject>
    <description>This metadata is child of Outbound integration field mapping and contains Integer to Picklist values mapping for a field</description>
    <fields>
        <fullName>ACV_Field_Mapping__c</fullName>
        <label>ACV Fields</label>
        <referenceTo>ACV_Field_Mapping__mdt</referenceTo>
        <relationshipName>Acv_Picklist_Value</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>Picklist_Value_Integer__c</fullName>
        <label>Picklist Value Integer</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Picklist_Value_Text__c</fullName>
        <label>Picklist Value Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Outbound Integration Picklist Value</label>
    <listViews>
        <fullName>All</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>ACV_Field_Mapping__c</columns>
        <columns>Picklist_Value_Integer__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Title_State</fullName>
        <columns>MasterLabel</columns>
        <columns>Picklist_Value_Text__c</columns>
        <columns>DeveloperName</columns>
        <columns>ACV_Field_Mapping__c</columns>
        <columns>Picklist_Value_Integer__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACV_Field_Mapping__c</field>
            <operation>equals</operation>
            <value>title_state_titles</value>
        </filters>
        <label>Title State</label>
    </listViews>
    <pluralLabel>Outbound Integration Picklist Values</pluralLabel>
</CustomObject>